sfdx-src/main/default/objects/PLM_Process_Stage__c/PLM_Process_Stage__c.object-meta.xml
<CustomObject>
    <label>PLM Process Stage</label>
    <nameField>
        <label>PLM Process Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLM Process Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>