sfdx-src/main/default/objects/PLM_Process_Stage__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this process stage active?</description>
    <inlineHelpText>is this process stage active? (yes/no)</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>