sfdx-src/main/default/objects/PLM_Process_Stage__c/fields/PLM_Process__c.field-meta.xml
<CustomField>
    <fullName>PLM_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PLM Process</label>
    <referenceTo>PLM_Process__c</referenceTo>
    <relationshipLabel>PLM Process Stages</relationshipLabel>
    <relationshipName>PLM_Process2Stage</relationshipName>
    <type>Lookup</type>
</CustomField>