sfdx-src/main/default/objects/PLM_Process_Stage__c/fields/Process_Stage_Description__c.field-meta.xml
<CustomField>
    <fullName>Process_Stage_Description__c</fullName>
    <description>brief description of this process stage name (255 chars)</description>
    <inlineHelpText>brief description of this process stage name (255 chars)</inlineHelpText>
    <label>Process Stage Description</label>
    <type>TextArea</type>
</CustomField>