sfdx-src/main/default/objects/PLM_Process_Stage__c/fields/Process_Stage_Owner__c.field-meta.xml
<CustomField>
    <fullName>Process_Stage_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>is there some contact who own this stage?</description>
    <inlineHelpText>is there some contact who own this stage?</inlineHelpText>
    <label>Process Stage Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PLM Process Stages</relationshipLabel>
    <relationshipName>PLM_Process_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>