sfdx-src/main/default/objects/PLM_Process_Stage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Process_Stage_Description__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Process_Stage_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>